--- a/README.Rmd
+++ b/README.Rmd
@@ -4,11 +4,12 @@ Getting & Cleaning Data - Course Project
 R Script : run_analysis.R 
 
 Procedure
-After loading the files into R, the y_train and y_test we substitutes with appropriate activity labels 
-and the x_test and x_train with features.
-Then used grep command to find mean and std dev  columns from the data set and created a subset.
-Then merged the two data set using rbind.
-Then using aggregate function created file Data set
+1.Load files in R.
+2.Substitute the y_train and y_test with appropriate activity labels
+3.Add Column names of x_test and x_train with features.
+4 Use grep command to find mean and std dev columns from the data set and created a subset.
+5.Merge the two datas set using rbind.
+6.Use aggregate function to create final Data Set
 
 
 Code Book :
